03/05/22  - пил ветки редактирования паркометса
какой-то трабл с отображением фото.
ну и над адаптировать бизнес логику под то, что ввелось 4 доп поля (забацать сравнение перед сохранением). А также начата подготовка к сохранению.

--- a/Parking/Parking/Parking/Views/ParkPlacesOps/ParkPlaceEditWindow.xaml
+++ b/Parking/Parking/Parking/Views/ParkPlacesOps/ParkPlaceEditWindow.xaml
@@ -10,6 +10,9 @@
         
         mc:Ignorable="d"
         Title="ParkPlaceEditWindow" Height="570" Width="730">
+    <Window.Resources>
+        <helpes:ImagePathConverter x:Key="imagePathConverter"/>
+    </Window.Resources>
     <Border BorderBrush="YellowGreen" BorderThickness="4" >
         <Grid Margin="4">
             <Grid.ColumnDefinitions>
@@ -26,8 +29,21 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <StackPanel HorizontalAlignment="Center">
-                    <TextBlock  Text="Паркувальне місце № " FontSize="12" FontWeight="Bold" VerticalAlignment="Center" Foreground="Red" TextWrapping="Wrap"/>
-                    <TextBlock  Text="{Binding CurrentRecord.SomeParkingPlace.ParkPlaceNumber, UpdateSourceTrigger=PropertyChanged}" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Foreground="Blue" />
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock  Text="Паркувальне місце № " FontSize="12" FontWeight="Bold" VerticalAlignment="Center" Foreground="Red" TextWrapping="Wrap"/>
+                        <TextBlock  Text="{Binding CurrentRecord.SomeParkingPlace.ParkPlaceNumber, UpdateSourceTrigger=PropertyChanged}" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Foreground="Blue" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                        <TextBlock  Text="Статус: " FontSize="12" FontWeight="Bold" VerticalAlignment="Center" />
+                        <RadioButton GroupName="D" Content="Вільне " VerticalAlignment="Center" IsChecked="{Binding  CurrentRecord.SomeParkingPlace.FreeStatus, UpdateSourceTrigger=PropertyChanged}"/>
+                        <RadioButton GroupName="D" Content="Зайняте" VerticalAlignment="Center" IsChecked="{Binding NotFree, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="0,8,0,0">                        
+                        <RadioButton GroupName="С" Content="Заїхав" FontWeight="Bold" Foreground="Blue"  VerticalAlignment="Center"
+                                     IsChecked="{Binding  CurrentRecord.SomeParkingPlace.Released, UpdateSourceTrigger=PropertyChanged}"/>
+                        <RadioButton GroupName="С" Content="Виїхав"  FontWeight="Bold" Foreground="Blue" VerticalAlignment="Center" 
+                                     IsChecked="{Binding NotInPlace, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
                 </StackPanel>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
@@ -55,8 +71,8 @@
                                 <TextBox  Text="{Binding CurrentRecord.SomePerson.Patronimic, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left"  Margin="3" VerticalContentAlignment="Center"/>
                                 <StackPanel Orientation="Horizontal" >
                                     <TextBlock  Text="Стать: " FontSize="12" FontWeight="Bold" VerticalAlignment="Center" />
-                                    <RadioButton GroupName="A" Content="Жіноча " VerticalAlignment="Center" IsChecked="{Binding CurrentRecord.SomePerson.Sex,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                                    <RadioButton GroupName="A" Content=" Чоловіча" VerticalAlignment="Center" />
+                                    <RadioButton GroupName="B" Content="Жіноча " VerticalAlignment="Center" IsChecked="{Binding  CurrentRecord.FemaleOwnPers, UpdateSourceTrigger=PropertyChanged}"/>
+                                    <RadioButton GroupName="B" Content=" Чоловіча" VerticalAlignment="Center" IsChecked="{Binding CurrentRecord.SomePerson.Sex, UpdateSourceTrigger=PropertyChanged}"/>
                                 </StackPanel>
                                 <TextBlock  Text="№ телефона: " FontSize="12" FontWeight="Bold" Grid.Row="4" VerticalAlignment="Center"/>
                                 <TextBox   Text="{Binding OwnerPhone1, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="13" HorizontalAlignment="Left"  Margin="3" VerticalContentAlignment="Center"/>
@@ -93,10 +109,10 @@
                             <TextBox  Text="{Binding CurrentRecord.TrustedPerson.FirstName, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left"  Margin="3" VerticalContentAlignment="Center"/>
                             <TextBlock  Text="По батькові: " FontSize="12" FontWeight="Bold" Grid.Row="2" VerticalAlignment="Center"/>
                             <TextBox  Text="{Binding CurrentRecord.TrustedPerson.Patronimic, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left"  Margin="3" VerticalContentAlignment="Center"/>
-                            <StackPanel Orientation="Horizontal" >
-                                <TextBlock  Text="Стать: " FontSize="12" FontWeight="Bold" VerticalAlignment="Center" />
-                                <RadioButton GroupName="A" Content="Жіноча " VerticalAlignment="Center" IsChecked="{Binding CurrentRecord.TrustedPerson.Sex, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
-                                <RadioButton GroupName="A" Content=" Чоловіча" VerticalAlignment="Center" />
+                            <TextBlock  Text="Стать: " FontSize="12" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"  Foreground="Red"/>
+                            <StackPanel Orientation="Horizontal" >                                
+                                <RadioButton GroupName="A" Content="Жіноча " VerticalAlignment="Center" IsChecked="{Binding CurrentRecord.FemaleTrustPers, UpdateSourceTrigger=PropertyChanged}"/>
+                                <RadioButton GroupName="A" Content=" Чоловіча" VerticalAlignment="Center"  IsChecked="{Binding CurrentRecord.TrustedPerson.Sex, UpdateSourceTrigger=PropertyChanged}"/>
                             </StackPanel>
                             <TextBlock  Text="№ телефона: " FontSize="12" FontWeight="Bold" Grid.Row="4" VerticalAlignment="Center"/>
                             <TextBox  Text="{Binding TrustPhone , UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="4" Margin="3" VerticalContentAlignment="Center"/>
@@ -105,11 +121,12 @@
                                     <TextBlock Text="Тип транспортного засобу" FontSize="12" FontWeight="Bold"  HorizontalAlignment="Center" />                                    
                                     <ComboBox   MinWidth="50"  
                                       IsEditable="False" IsSynchronizedWithCurrentItem="True"                                     
-                                     SelectedItem="{Binding FreeparkPlace,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                        
+                                     SelectedItem="{Binding VType, UpdateSourceTrigger=PropertyChanged}"                        
                                      ItemsSource="{Binding  VehicleTypeList}" 
                                      HorizontalContentAlignment="Center"
+                                     DisplayMemberPath="TypeName"
                                      Background="White" 
-                                     FontSize="14" ToolTip="{Binding MessageForChangeParkPlace, UpdateSourceTrigger=PropertyChanged}">
+                                     FontSize="14" >
                                     </ComboBox>
                                 </StackPanel>
                             </Border>
@@ -127,7 +144,7 @@
                     <Grid.Background>
                         <ImageBrush ImageSource="{Binding DefaultPhoto, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid.Background>
-                    <!--<Image Source="{Binding Path = CurrentRecord.Photo, Converter={StaticResource imagePathConverter}, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />-->
+                    <Image Source="{Binding Path = CurrentRecord.Photo, Converter={StaticResource imagePathConverter}, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />
                 </Grid>
                 <Grid Grid.Row="1" Grid.Column="1">
                    
@@ -183,6 +200,7 @@
                                      Background="White" 
                                      FontSize="14" ToolTip="{Binding MessageForChangeParkPlace, UpdateSourceTrigger=PropertyChanged}">
                             </ComboBox>
+                            
                             
                             <Button  Content="Друк квитанції" Background="Brown" Height="25" />
                             <Button  Content="Відмінити"  Height="25" Command="{Binding CencelWindowCommand}"
