--- a/Parking/Parking/Parking/Views/ParkPlacesOps/ParkPlaceEditWindow.xaml
+++ b/Parking/Parking/Parking/Views/ParkPlacesOps/ParkPlaceEditWindow.xaml
@@ -48,7 +48,7 @@
                 </StackPanel>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="1.7*"/>
+                        <RowDefinition Height="1.8*"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <TextBox  Text="{Binding CurrentRecord.SomeContacts.Adress, UpdateSourceTrigger=PropertyChanged}" Margin="3" 
@@ -58,8 +58,13 @@
                         <StackPanel >
                             <Border BorderThickness="1" BorderBrush="Gray">
                                 <StackPanel HorizontalAlignment="Center">
-                                    <TextBlock  Text="Власник " FontSize="14" FontWeight="Bold" HorizontalAlignment="Center" Foreground="#FFBD0000"/>
-                                    <TextBox Grid.Column="1" Text="{Binding CurrentRecord.SomeClient.OrgName, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Margin="3" VerticalContentAlignment="Center"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <CheckBox x:Name="OrgNameEnable" VerticalAlignment="Center" Content="  "/>
+                                        <TextBlock  Text="Організація " FontSize="14" FontWeight="Bold" HorizontalAlignment="Center" Foreground="#FFBD0000"/>
+                                    </StackPanel>
+
+                                    <TextBox Grid.Column="1" IsEnabled="{Binding ElementName=OrgNameEnable, Path=IsChecked}"
+                                             Text="{Binding CurrentRecord.SomeClient.OrgName, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Margin="3" VerticalContentAlignment="Center"/>
                                 </StackPanel>
                             </Border>
                             <StackPanel HorizontalAlignment="Center">
@@ -123,6 +128,7 @@
                 </Border>
 
                 <Grid Grid.ColumnSpan="3" Margin="4">
+                    <!--<Image Source="{Binding Path = CurrentRecord.SomeVehicle.VPhoto, Converter={StaticResource imagePathConverter}, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />-->                    
                     <Grid.ContextMenu>
                         <ContextMenu>
                             <MenuItem Header="Видалити фото?" Command="{Binding DeleteVehiclePhotoCommand}" />
@@ -132,12 +138,12 @@
                     <Grid.Background>
                         <ImageBrush ImageSource="{Binding DefaultPhoto, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid.Background>
-                    <Image Source="{Binding Path = CurrentRecord.Photo, Converter={StaticResource imagePathConverter}, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />
+                    
                 </Grid>
                 <Grid Grid.Row="1" Grid.Column="1">
 
                     <StackPanel Margin="3">
-                        <Border Background="#FFD3E082">
+                        <Border Background="#FFD3E082" BorderBrush="Gray" BorderThickness="1">
                             <StackPanel>
                                 <TextBlock Text="Реєстраційний номер " TextWrapping="Wrap" FontSize="16" FontWeight="Bold"  HorizontalAlignment="Center" Foreground="Red"/>
                                 <TextBox  Text="{Binding RegNumber, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" 
@@ -160,7 +166,7 @@
                                 </StackPanel>
                             </StackPanel>
                         </Border>
-                        <Border BorderBrush="Gray" BorderThickness="1" Background="#FFBFDFE6">
+                        <Border BorderBrush="Gray" BorderThickness="1" Background="#FFBFDFE6" Margin="-1">
                             <StackPanel>
                                 <TextBlock Text="Дата закінчення строку оренди" FontSize="12" TextWrapping="Wrap" TextAlignment="Center" Foreground="Red" FontWeight="Bold"  HorizontalAlignment="Center" />
                                 <TextBlock Text="{Binding DeadLine, UpdateSourceTrigger=PropertyChanged}" FontSize="14"  TextAlignment="Center" Foreground="Blue" FontWeight="Bold"  HorizontalAlignment="Center" />
@@ -179,7 +185,7 @@
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <TextBlock Text="Внести оплату " FontSize="14" TextWrapping="Wrap" TextAlignment="Center" Foreground="Red" FontWeight="Bold"  
                                                    HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                    <TextBox  Text="{Binding Coast, UpdateSourceTrigger=PropertyChanged}" MinWidth="50" FontSize="16" MaxLength="5" HorizontalAlignment="Center"  Margin="3" HorizontalContentAlignment="Center" />
+                                    <TextBox  Text="{Binding Coast, UpdateSourceTrigger=PropertyChanged}" MinWidth="60" FontSize="14" MaxLength="5" HorizontalAlignment="Center"  Margin="3" HorizontalContentAlignment="Center" />
                                 </StackPanel>
                             </StackPanel>
                         </Border>
